--- a/pom.xml
+++ b/pom.xml
@@ -20,54 +20,49 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporing.outputEncoding>UTF-8</project.reporing.outputEncoding>
+        <jvm.target>1.8</jvm.target>
 
-        <spring-context.version>5.1.5.RELEASE</spring-context.version>
-        <spring-jdbc.version>5.1.5.RELEASE</spring-jdbc.version>
-        <commons-dbcp2.version>2.5.0</commons-dbcp2.version>
-        <spring-orm.version>5.1.5.RELEASE</spring-orm.version>
+
+        <springframework.version>5.1.5.RELEASE</springframework.version>
+
+        <!--<commons-dbcp2.version>2.5.0</commons-dbcp2.version>-->
+
         <javax.persistence-api.version>2.2</javax.persistence-api.version>
         <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
+        <javax.inject.version>1</javax.inject.version>
+        <javax-jms.version>2.0.1</javax-jms.version>
+        <javax.ejb-api.version>3.2</javax.ejb-api.version>
+
         <cdi-api.version>2.0.SP1</cdi-api.version>
-        <apache.httpclient.version>4.5.7</apache.httpclient.version>
-        <apache.httpcore.version>4.4.11</apache.httpcore.version>
         <jackson.core.version>2.9.8</jackson.core.version>
-        <hibernate-core.version>5.4.1.Final</hibernate-core.version>
-        <activemq-client.version>5.15.8</activemq-client.version>
+        <!--<hibernate-core.version>5.4.1.Final</hibernate-core.version>-->
+        <!--<activemq-client.version>5.15.8</activemq-client.version>-->
+        <validation-api.version>2.0.1.Final</validation-api.version>
+        <hessian.version>4.0.60</hessian.version>
+        <httpclient.version>4.5.7</httpclient.version>
+        <httpcore.version>4.4.11</httpcore.version>
+        <lombok.version>1.18.6</lombok.version>
+        <slf4j.version>1.7.25</slf4j.version>
 
         <junit.version>4.12</junit.version>
         <mockito.version>2.8.47</mockito.version>
-
-        <lombok.version>1.18.6</lombok.version>
-        <postgres.version>42.2.5</postgres.version>
-        <javax-jms.version>2.0.1</javax-jms.version>
-        <javax.ejb-api.version>3.2</javax.ejb-api.version>
-        <jboss-jms-api_2.0_spec.version>1.0.2.Final</jboss-jms-api_2.0_spec.version>
-        <jvm.target>1.8</jvm.target>
-
         <jacoco.version>0.8.1</jacoco.version>
 
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <!--UTILS-->
+
             <dependency>
                 <groupId>javax.inject</groupId>
                 <artifactId>javax.inject</artifactId>
-                <version>1</version>
+                <version>${javax.inject.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
                 <version>${javax.servlet-api.version}</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.postgresql</groupId>
-                <artifactId>postgresql</artifactId>
-                <version>${postgres.version}</version>
             </dependency>
 
             <dependency>
@@ -75,6 +70,91 @@
                 <artifactId>javax.jms-api</artifactId>
                 <version>${javax-jms.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>javax.ejb</groupId>
+                <artifactId>javax.ejb-api</artifactId>
+                <version>${javax.ejb-api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.enterprise</groupId>
+                <artifactId>cdi-api</artifactId>
+                <version>${cdi-api.version}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.persistence</groupId>
+                <artifactId>javax.persistence-api</artifactId>
+                <version>${javax.persistence-api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>${validation-api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.caucho</groupId>
+                <artifactId>hessian</artifactId>
+                <version>${hessian.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${httpclient.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpcore</artifactId>
+                <version>${httpcore.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.core.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>${slf4j.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>bell.weatherbroker</groupId>
+                <artifactId>common_model</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
             <!--TEST-->
             <dependency>
                 <groupId>junit</groupId>
