--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,12 @@
         <project.reporing.outputEncoding>UTF-8</project.reporing.outputEncoding>
         <jvm.target>1.8</jvm.target>
 
+        <wildfly-hostname>localhost</wildfly-hostname>
+        <wildfly-port>9991</wildfly-port>
+        <wildfly-username>postgres</wildfly-username>
+        <wildfly-password>1</wildfly-password>
 
         <springframework.version>5.1.5.RELEASE</springframework.version>
-
-        <!--<commons-dbcp2.version>2.5.0</commons-dbcp2.version>-->
 
         <javax.persistence-api.version>2.2</javax.persistence-api.version>
         <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
@@ -35,8 +37,6 @@
 
         <cdi-api.version>2.0.SP1</cdi-api.version>
         <jackson.core.version>2.9.8</jackson.core.version>
-        <!--<hibernate-core.version>5.4.1.Final</hibernate-core.version>-->
-        <!--<activemq-client.version>5.15.8</activemq-client.version>-->
         <validation-api.version>2.0.1.Final</validation-api.version>
         <hessian.version>4.0.60</hessian.version>
         <httpclient.version>4.5.7</httpclient.version>
@@ -46,7 +46,6 @@
 
         <junit.version>4.12</junit.version>
         <mockito.version>2.8.47</mockito.version>
-        <jacoco.version>0.8.1</jacoco.version>
 
     </properties>
 
@@ -82,12 +81,6 @@
                 <artifactId>cdi-api</artifactId>
                 <version>${cdi-api.version}</version>
                 <scope>provided</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>${lombok.version}</version>
             </dependency>
 
             <dependency>
@@ -137,9 +130,17 @@
             </dependency>
 
             <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
@@ -181,10 +182,10 @@
                     <artifactId>wildfly-maven-plugin</artifactId>
                     <version>2.0.1.Final</version>
                     <configuration>
-                        <hostname>localhost</hostname>
-                        <port>9991</port>
-                        <username>postgres</username>
-                        <password>1</password>
+                        <hostname>${wildfly-hostname}</hostname>
+                        <port>${wildfly-port}</port>
+                        <username>${wildfly-username}</username>
+                        <password>${wildfly-password}</password>
                     </configuration>
                 </plugin>
 
@@ -196,7 +197,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.6.1</version>
+                    <version>3.8.0</version>
                     <configuration>
                         <source>${jvm.target}</source>
                         <target>${jvm.target}</target>
@@ -213,35 +214,5 @@
 
         </pluginManagement>
 
-        <plugins>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.version}</version>
-                <executions>
-                    <execution>
-                        <id>pre-unit-test</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <configuration>
-                            <destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
-                            <propertyName>jacoco.arg</propertyName>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>post-unit-test</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                        <configuration>
-                            <dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
-                            <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
     </build>
 </project>
