Метод YahooService@getWeatherFromYahoo(String cityName):  - вынес в отдельные методы получение сигнатур и ответа от сервера Yahoo;  - вынес в статические поля HttpClient и ObjectMapper.
Подкорректировал проверки параметров публичных методов.

--- a/admin_api/pom.xml
+++ b/admin_api/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>mockito-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
