--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <httpcore.version>4.4.11</httpcore.version>
         <lombok.version>1.18.6</lombok.version>
         <slf4j.version>1.7.25</slf4j.version>
+        <commons-lang3.version>3.8.1</commons-lang3.version>
 
         <junit.version>4.12</junit.version>
         <mockito.version>2.8.47</mockito.version>
@@ -154,6 +155,12 @@
                 <groupId>bell.weatherbroker</groupId>
                 <artifactId>common_model</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
             </dependency>
 
             <!--TEST-->
