--- a/yahoo_service/pom.xml
+++ b/yahoo_service/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>mockito-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
