--- a/yahoo_service/pom.xml
+++ b/yahoo_service/pom.xml
@@ -75,6 +75,14 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.12</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
